--- a/css/Booking details.css
+++ b/css/Booking details.css
@@ -1,27 +1,56 @@
+@charset "UTF-8";
+body {
+  font-family: "微軟正黑體", Arial ,sans-serif;
+  background-color: black; }
+
 .Bookingh1 {
   font-size: 48px;
+  text-align: center;
   margin: 20px 10px;
-  color: #42d9ff; }
+  color: white; }
 
 .Bookingh2 {
   font-size: 32px;
+  text-align: left;
   margin: 20px 10px;
-  color: #42d9ff; }
+  margin-left: 300px;
+  color: white; }
+
+.memberinfo {
+  text-align: left;
+  margin-left: 320px;
+  font-size: 20px;
+  color: white;
+  width: 500px;
+  border: 3px solid #35ffea; }
+
+.memberinfo p {
+  margin: 10px 10px;
+  padding: 10px 10px; }
+
+.creditCardinfo {
+  text-align: left;
+  margin-left: 320px;
+  font-size: 20px;
+  color: white;
+  width: 408px;
+  border: 3px solid #35ffea; }
+
+.creditCardinfo p {
+  margin: 10px 10px;
+  padding: 10px 10px; }
+
+.creditCardinfo input {
+  margin: 10px 10px;
+  padding: 10px 10px; }
 
 table {
-  border: 1px solid black;
-  margin: 20px 10px;
-  font-size: 20px; }
-
-.css-serial {
-  counter-reset: serial-number;
-  /* Set the serial number counter to 0 */ }
-
-.css-serial td:first-child:before {
-  counter-increment: serial-number;
-  /* Increment the serial number counter */
-  content: counter(serial-number);
-  /* Display the counter */ }
+  margin: 0 auto;
+  margin-top: 30px;
+  font-size: 20px;
+  text-align: center;
+  color: white;
+  border: 3px solid #35ffea; }
 
 th {
   text-align: center;
@@ -41,7 +70,8 @@ input {
   font-size: 10px; }
 
 .yesmodifyBtn {
-  text-align: center; }
+  text-align: center;
+  margin: 23px 10px; }
 
 .yesmodifyBtn a {
   text-decoration: none;
