--- a/css/Booking_details.css
+++ b/css/Booking_details.css
@@ -106,6 +106,11 @@ table {
   color: white; }
 
 /*-----header end-----*/
+* {
+  margin: 0px;
+  padding: 0px;
+  /*outline: 1px solid red;*/ }
+
 body {
   font-family: "微軟正黑體", Arial ,sans-serif;
   background-image: url("../img/Galaxy_1.jpg");
@@ -118,61 +123,90 @@ body {
   margin-bottom: 31px;
   color: white; }
 
+@media screen and (max-width: 767px) {
+  .Bookingh1 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto; } }
+
 .Bookingh2 {
   font-size: 32px;
   margin: 20px 10px;
-  margin-left: 300px;
+  margin-top: 50px;
+  margin-left: 23%;
   color: white; }
+
+@media screen and (max-width: 767px) {
+  .Bookingh2 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto; } }
 
 .memberinfo {
   text-align: left;
-  margin-left: 300px;
-  font-size: 16px;
+  margin-left: 23%;
+  font-size: 20px;
   letter-spacing: 3px;
   color: white;
-  width: 500px;
+  width: 54%;
   border: 3px solid #35ffea; }
+
+@media screen and (max-width: 767px) {
+  .memberinfo {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto; } }
 
 .memberinfo p {
   margin: 10px 10px;
   padding: 10px 10px; }
 
-.creditCardinfo {
-  text-align: left;
-  margin-left: 300px;
-  font-size: 16px;
-  letter-spacing: 3px;
-  color: white;
-  width: 408px;
-  border: 3px solid #35ffea; }
-
-.creditCardinfo p {
-  margin: 10px 10px;
-  padding: 10px 10px; }
-
-.creditCardinfo input {
-  margin: 10px 10px;
-  padding: 5px 5px; }
-
-table {
+.orderlistsection table {
   margin: 0 auto;
   margin-top: 30px;
-  font-size: 16px;
+  font-size: 20px;
   letter-spacing: 3px;
-  text-align: center;
   color: white;
-  border: 3px solid #35ffea; }
+  border: 3px solid #35ffea;
+  width: 54%; }
+
+@media screen and (max-width: 767px) {
+  .orderlistsection table {
+    width: 85%; } }
 
 th {
   text-align: center;
-  padding: 20px 20px; }
+  padding: 20px 10px; }
 
 td {
   text-align: left;
-  padding: 20px 20px; }
+  padding: 10px 10px; }
 
 .integral {
   display: inline-block; }
+
+.creditCardinfo {
+  text-align: left;
+  margin-left: 23%;
+  font-size: 20px;
+  letter-spacing: 3px;
+  color: white;
+  width: 54%;
+  border: 3px solid #35ffea; }
+
+@media screen and (max-width: 767px) {
+  .creditCardinfo {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto; } }
+
+.creditCardinfo p {
+  margin: 5px 5px;
+  padding: 5px 10px; }
+
+.creditCardinfo input {
+  margin: 10px 10px;
+  padding: 3px 3px; }
 
 .Bookingh3 {
   font-size: 20px; }
@@ -182,11 +216,10 @@ input {
 
 .yesmodifyBtn {
   text-align: center;
-  margin: 23px 10px; }
+  margin: 40px 30px; }
 
 .yesmodifyBtn a {
   text-decoration: none;
-  width: 20px;
   color: white;
   background-color: #FFC116;
-  padding: 10px 10px; }
+  padding: 10px 20px; }
