--- a/css/Theaterbuyticket.css
+++ b/css/Theaterbuyticket.css
@@ -108,21 +108,35 @@ table {
 /*-----header end-----*/
 * {
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+  /*outline: 1px solid red;*/ }
 
 body {
-  font-family: "微軟正黑體", Arial, sans-serif;
-  background-color: black;
+  font-family: "微軟正黑體", Arial ,sans-serif;
   background-image: url("../img/Galaxy_1.jpg");
   background-size: cover; }
+
+.container {
+  width: 70%;
+  margin: 0 auto; }
+
+@media screen and (max-width: 767px) {
+  .container {
+    width: 100%;
+    /*max-width: 700px;*/ }
+  .container .Menu {
+    position: relative;
+    top: 160px;
+    left: 73px; } }
 
 .Menu {
   width: 50%;
   position: relative;
   top: 160px;
-  left: 310px; }
+  left: 25%; }
 
 .progressinfoMenu {
+  margin-top: 10px;
   background-color: #ffc116;
   width: 200px;
   height: 40px;
@@ -130,7 +144,9 @@ body {
   /*-45度，反方向堆回來，那塊顏色就消失*/
   background-size: 50% 50%;
   /*顏色各占一 半*/
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .progressinfoMenu a {
   position: absolute;
@@ -138,10 +154,12 @@ body {
   left: 20px;
   color: white;
   padding: 7px 0px;
-  text-decoration: none; }
+  text-decoration: none;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .buyticketMenu {
-  margin-top: 8px;
+  margin-top: 10px;
   background-color: #ffc116;
   width: 200px;
   height: 40px;
@@ -149,7 +167,9 @@ body {
   /*-45度，反方向堆回來，那塊顏色就消失*/
   background-size: 50% 50%;
   /*顏色各占一 半*/
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .buyticketMenu a {
   position: relative;
@@ -157,14 +177,32 @@ body {
   left: 20px;
   color: white;
   padding: 8px 0px;
-  text-decoration: none; }
+  text-decoration: none;
+  transform: translate(0);
+  transition: all 1s ease; }
+
+.sq-one.move {
+  transform: translate(0px, 50px); }
+
+.sq-two.move {
+  transform: translate(0px, -50px); }
 
 /*topright*/
 .topright {
   width: 50%;
   position: relative;
   top: 60px;
-  left: 550px; }
+  left: 40%; }
+
+.topright .Recycle_arrows {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  cursor: pointer; }
+
+@media screen and (max-width: 767px) {
+  .topright .Recycle_arrows {
+    display: none; } }
 
 .topright .Menutitle {
   position: absolute;
@@ -173,112 +211,73 @@ body {
   color: white;
   font-size: 32px; }
 
+@media screen and (max-width: 767px) {
+  .topright .Menutitle {
+    width: 119px;
+    margin-top: 28px;
+    margin-left: 20px;
+    font-size: 24px; } }
+
 /*畫線*/
 .toprightcanvas {
   position: absolute;
   top: 10px;
   left: 230px; }
 
-.topright hr {
-  position: absolute;
-  top: 20px;
-  left: 300px; }
+@media screen and (max-width: 767px) {
+  .toprightcanvas {
+    display: none; } }
 
-.topright .hrRotate {
-  position: absolute;
-  top: 56px;
-  left: 387px;
-  transform: rotate(45deg); }
-
-.topright .hrRotate2 {
-  position: absolute;
-  top: 143px;
-  left: 424px;
-  transform: rotate(90deg); }
-
-/*星球 */
-.topright .planet {
-  position: absolute;
-  top: 200px;
-  left: 200px; }
-
-/*飛船*/
-.topright .spaceship {
-  position: absolute;
-  top: 250px;
-  left: 240px;
-  /*transform: rotate(25deg);*/ }
-
-/*購買票劵*/
-.buyticketarea {
-  font-size: 20px;
-  /*margin:0 auto;*/
-  margin-top: 20%;
-  margin-left: 23%; }
-
-.buyticketarea table {
-  border: 3px solid #35ffea;
-  width: 500px;
-  height: 300px;
-  opacity: 0.9;
-  color: white;
-  font-size: 16px;
-  letter-spacing: 3px; }
-
-.buyticketarea td {
-  padding: 10px 10px;
-  text-align: left;
-  margin-left: 1%;
-  margin-bottom: 1%;
-  letter-spacing: 1.2px; }
-
-.buyticketarea a {
-  color: white;
-  background-color: #FFC116;
-  padding: 5px 10px;
-  text-decoration: none;
-  text-align: center; }
-
+/*.topright hr{
+      position: absolute;
+      top:20px;
+      left:300px;
+    }
+    .topright .hrRotate{
+      position: absolute;
+      top:56px;
+      left:387px;
+      transform: rotate(45deg);
+    }
+    .topright .hrRotate2{
+      position: absolute;
+      top:143px;
+      left:424px;
+      transform: rotate(90deg);
+    }*/
 /*節目場次*/
 .TheaterEvent {
   padding: 2em 0 4em 0;
   margin: 0 auto;
-  margin-top: 30px; }
+  margin-top: 310px; }
 
-.homepageTheater h2 {
-  color: #ffffff;
-  text-align: center;
-  font-size: 32px; }
+@media screen and (max-width: 767px) {
+  .TheaterEvent {
+    margin-top: 200px; } }
 
 .Theatercounter {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1195px; }
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  max-width: 1068px; }
 
 .Theaterinfo {
   display: inline-block;
   margin: 10px 13px;
-  /*background-color: rgba(15,159,185,0.64);*/
-  /*opacity: 0.64px ; */
-  border: 3px solid #35ffea; }
+  border: 3px solid #42d9ff; }
 
-section.special {
-  text-align: center;
+.Theaterinfo .special {
   float: left;
   display: inline-block;
-  width: 270px;
-  height: 250px;
   margin: 10px;
-  position: relative; }
-
-.image.fit {
-  display: block;
-  width: 560px; }
+  /*width:200px;
+      height:auto;*/
+  /*position:relative;*/ }
 
 .image {
   /* border-radius: 6px;*/
   display: block;
-  width: 560px; }
+  width: 400px; }
 
 .spcial h3 {
   font-size: 20px;
@@ -289,6 +288,19 @@ section.special {
 
 .spcial p {
   color: #ffffff;
-  width: 534px;
+  width: 397px;
   text-align: left;
   padding: 10px 10px; }
+
+.spcial .buyticket {
+  float: right;
+  color: white;
+  background-color: #FFC116;
+  padding: 5px 10px;
+  margin: 10px 10px;
+  text-decoration: none; }
+
+.Theaterinfo .spcial:after {
+  content: '';
+  display: block;
+  clear: both; }
