--- a/css/Theaterinfo.css
+++ b/css/Theaterinfo.css
@@ -112,18 +112,31 @@ table {
   /*outline: 1px solid red;*/ }
 
 body {
-  font-family: "微軟正黑體", Arial, sans-serif;
-  background-color: black;
+  font-family: "微軟正黑體", Arial ,sans-serif;
   background-image: url("../img/Galaxy_1.jpg");
   background-size: cover; }
+
+.container {
+  width: 70%;
+  margin: 0 auto; }
+
+@media screen and (max-width: 767px) {
+  .container {
+    width: 100%;
+    /*max-width: 700px;*/ }
+  .container .Menu {
+    position: relative;
+    top: 160px;
+    left: 73px; } }
 
 .Menu {
   width: 50%;
   position: relative;
   top: 160px;
-  left: 310px; }
+  left: 25%; }
 
 .progressinfoMenu {
+  margin-top: 10px;
   background-color: #ffc116;
   width: 200px;
   height: 40px;
@@ -131,7 +144,9 @@ body {
   /*-45度，反方向堆回來，那塊顏色就消失*/
   background-size: 50% 50%;
   /*顏色各占一 半*/
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .progressinfoMenu a {
   position: absolute;
@@ -139,10 +154,12 @@ body {
   left: 20px;
   color: white;
   padding: 7px 0px;
-  text-decoration: none; }
+  text-decoration: none;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .buyticketMenu {
-  margin-top: 8px;
+  margin-top: 10px;
   background-color: #ffc116;
   width: 200px;
   height: 40px;
@@ -150,7 +167,9 @@ body {
   /*-45度，反方向堆回來，那塊顏色就消失*/
   background-size: 50% 50%;
   /*顏色各占一 半*/
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  transform: translate(0);
+  transition: all 1s ease; }
 
 .buyticketMenu a {
   position: relative;
@@ -158,14 +177,32 @@ body {
   left: 20px;
   color: white;
   padding: 8px 0px;
-  text-decoration: none; }
+  text-decoration: none;
+  transform: translate(0);
+  transition: all 1s ease; }
+
+.sq-one.move {
+  transform: translate(0px, 50px); }
+
+.sq-two.move {
+  transform: translate(0px, -50px); }
 
 /*topright*/
 .topright {
   width: 50%;
   position: relative;
   top: 60px;
-  left: 550px; }
+  left: 40%; }
+
+.topright .Recycle_arrows {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  cursor: pointer; }
+
+@media screen and (max-width: 767px) {
+  .topright .Recycle_arrows {
+    display: none; } }
 
 .topright .Menutitle {
   position: absolute;
@@ -174,60 +211,101 @@ body {
   color: white;
   font-size: 32px; }
 
+@media screen and (max-width: 767px) {
+  .topright .Menutitle {
+    width: 119px;
+    margin-top: 28px;
+    margin-left: 20px;
+    font-size: 24px; } }
+
 /*畫線*/
 .toprightcanvas {
   position: absolute;
   top: 10px;
   left: 230px; }
 
-.topright hr {
-  position: absolute;
-  top: 20px;
-  left: 300px; }
+@media screen and (max-width: 767px) {
+  .toprightcanvas {
+    display: none; } }
 
-.topright .hrRotate {
-  position: absolute;
-  top: 56px;
-  left: 387px;
-  transform: rotate(45deg); }
-
-.topright .hrRotate2 {
-  position: absolute;
-  top: 143px;
-  left: 424px;
-  transform: rotate(90deg); }
-
+/*.topright hr{
+      position: absolute;
+      top:20px;
+      left:300px;
+    }
+    .topright .hrRotate{
+      position: absolute;
+      top:56px;
+      left:387px;
+      transform: rotate(45deg);
+    }
+    .topright .hrRotate2{
+      position: absolute;
+      top:143px;
+      left:424px;
+      transform: rotate(90deg);
+    }*/
 /*星球 */
 .topright .planet {
   position: absolute;
   top: 200px;
   left: 230px; }
 
+@media screen and (max-width: 767px) {
+  .topright .planet {
+    display: none; } }
+
 /*太空人*/
 .topright .spaceman {
   position: absolute;
   top: 250px;
   left: 240px;
-  transform: rotate(35deg); }
+  /*transform: rotate(35deg);*/
+  animation: jump 3s linear  infinite normal; }
+
+@media screen and (max-width: 767px) {
+  .topright .spaceman {
+    display: none; } }
+
+@keyframes jump {
+  0% {
+    transform: translateY(0) rotate(0deg); }
+  20% {
+    transform: translateY(-5px) rotate(2deg); }
+  40% {
+    transform: translateY(-10px) rotate(2deg); }
+  50% {
+    transform: translateY(-15px) rotate(0deg); }
+  60% {
+    transform: translateY(-10px) rotate(-2deg); }
+  80% {
+    transform: translateY(-5px) rotate(-2deg); }
+  100% {
+    transform: translateY(0) rotate(0deg); } }
 
 /*節目1*/
 .programone {
   width: 500px;
   position: relative;
   top: 300px;
-  left: 300px; }
+  left: 13%; }
+
+@media screen and (max-width: 767px) {
+  .programone {
+    width: 84%;
+    left: 70px; } }
 
 .programone .programonetitle {
   width: 300px;
   color: white;
   font-size: 32px; }
 
-.programone .programoneHr {
+.programone .programoneline {
   position: absolute;
   top: 6%;
   left: 1%;
   width: 7px;
-  height: 100%;
+  height: 10%;
   /*border: 1px #7bd3f8 solid;*/
   /*border-radius: 10px;*/
   background-color: #35ffba; }
@@ -240,12 +318,12 @@ body {
   width: 300px;
   color: white; }
 
-.programone .programoneHr2 {
+.programone .programoneline2 {
   position: absolute;
   top: 20%;
   left: 5%;
   width: 3px;
-  height: 50%;
+  height: 46%;
   /*border: 1px #7bd3f8 solid;*/
   /*border-radius: 10px;*/
   background-color: #35ffba; }
@@ -253,18 +331,54 @@ body {
 .programone .spaceship {
   position: relative;
   top: 220px;
-  left: -150px; }
+  left: -200%;
+  width: 500px;
+  height: 500px; }
+
+@media screen and (max-width: 767px) {
+  .programone .spaceship {
+    top: 80px;
+    width: 300px;
+    height: 300px; } }
+
+.programtwoimg2 {
+  position: absolute;
+  top: 130%;
+  left: 60%; }
+
+@media screen and (max-width: 767px) {
+  .programtwoimg2 {
+    display: none; } }
+
+.programtwoimg3 {
+  position: absolute;
+  top: 160%;
+  left: 20%; }
+
+@media screen and (max-width: 767px) {
+  .programtwoimg3 {
+    display: none; } }
 
 /*節目2*/
 .programtwo {
   width: 30%;
   position: relative;
   top: 200px;
-  left: 850px; }
+  left: 60%; }
+
+@media screen and (max-width: 767px) {
+  .programtwo {
+    width: 30%;
+    top: 450px;
+    left: 40%; } }
 
 .programtwo .programtwotitle {
   color: white;
   font-size: 32px; }
+
+@media screen and (max-width: 767px) {
+  .programtwo .programtwotitle {
+    width: 200px; } }
 
 .programtwo .programtwocontent {
   font-size: 16px;
@@ -274,14 +388,17 @@ body {
   width: 300px;
   color: white; }
 
+@media screen and (max-width: 767px) {
+  .programtwo .programtwocontent {
+    width: 200px;
+    color: white; } }
+
 .programtwo .programtwospan {
   position: absolute;
-  top: 75%;
+  top: 85%;
   left: 65%;
   width: 7px;
-  height: 420%;
-  /*border: 1px #7bd3f8 solid;
-      border-radius: 10px;*/
+  height: 10%;
   background-color: #35ffba; }
 
 .programtwo .programtwospan2 {
@@ -289,48 +406,53 @@ body {
   top: 90%;
   left: 58%;
   width: 3px;
-  height: 390%;
+  height: 350%;
   /*border: 1px #7bd3f8 solid;
       border-radius: 10px;*/
   background-color: #35ffba; }
 
+@media screen and (max-width: 767px) {
+  .programtwo .programtwospan {
+    top: 88%;
+    height: 1%; }
+  .programtwo .programtwospan2 {
+    height: 200%; } }
+
 .programtwo .programtwoHr {
   position: absolute;
-  top: 481%;
+  top: 433%;
   right: 41%;
-  width: 91%;
-  /*height: 100%;*/
+  width: 120%;
+  height: 3%;
   background-color: #35ffba; }
 
 .programtwo .programtwoHr2 {
   position: absolute;
-  top: 493%;
+  top: 440%;
   right: 33%;
-  width: 99%;
-  /*height: 100%;*/
+  width: 140%;
+  height: 3%;
   background-color: #35ffba; }
 
 .programtwo .programtwoimg {
   position: absolute;
-  top: 360%;
-  right: 6%; }
+  top: 348%;
+  left: 18%; }
 
-.programtwo .programtwoimg2 {
-  position: absolute;
-  top: 210%;
-  right: 100%; }
-
-.programtwo .programtwoimg3 {
-  position: absolute;
-  top: 330%;
-  left: -180%; }
+@media screen and (max-width: 767px) {
+  .programtwo .programtwoHr {
+    display: none; }
+  .programtwo .programtwoHr2 {
+    display: none; }
+  .programtwo .programtwoimg {
+    top: 250%;
+    left: -62%;
+    margin-bottom: 15%; } }
 
 /*立即購買按鈕*/
 .buyticketBtn {
-  /*position:absolute;
-      top:210%;
-      left:50%;*/
-  text-decoration: none;
+  position: absolute;
+  left: 40%;
   width: 70px;
   background-color: #FFC116;
   padding: 10px 10px;
@@ -340,3 +462,8 @@ body {
 .buyticketBtn a {
   text-decoration: none;
   color: white; }
+
+@media screen and (max-width: 767px) {
+  .buyticketBtn {
+    top: 130%;
+    left: 13%; } }
